tests/fixtures/positive/compose/ComposePreviewAnnotationMissing.kt
package test
import androidx.compose.runtime.Composable

@Composable
fun FooPreview() { Foo() }
